# mink-backend

./: .editorconfig  .gitignore  .markdownlint.yaml  CHANGELOG.md  Changelog.md  README.md  config.py  pyproject.toml  queue_manager.py  release.sh  requirements-dev.txt  requirements.in  requirements.txt  run.py
docs/: developers-guide.md  main.py  mkdocs.yml
docs/md2pdf/: .gitignore  README.md  intro_common_report.md  make_pdf.sh  settings_template.tex
docs/mkdocs/: developers-guide.md  images  index.md
documentation/: README.md  developers-guide.md  info.yaml  postman.json  update-oas.py
documentation/md2pdf/: .gitignore  make_pdf.sh  settings_template.tex
mink/: __init__.py  config.py  corpus_registry.py  exceptions.py  jobs.py  logging.py  main.py  openapi_info.yaml  queue.py  routes.py  status.py  utils.py
mink/cache/: cache.py  cache_utils.py  memcached.py
mink/core/: __init__.py  config.py  corpus_registry.py  exceptions.py  extensions.py  info.py  jobs.py  logging.py  models.py  queue.py  registry.py  resource.py  routes.py  status.py  user.py  utils.py
mink/memcached/: cache.py
mink/metadata/: metadata_routes.py  routes.py  storage.py
mink/nextcloud/: login.py  routes.py  storage.py
mink/sb_auth/: login.py  routes.py
mink/sparv/: models.py  process_routes.py  storage.py  storage_routes.py  utils.py
mink/static/: oas.yaml
mink/templates/: apidoc.html  developers-guide.md  docsify.html
minsb/: __init__.py  corpus_registry.py  exceptions.py  jobs.py  paths.py  queue.py  routes.py  utils.py
minsb/memcached/: cache.py
minsb/nextcloud/: login.py  routes.py  storage.py
minsb/sb_auth/: login.py
minsb/sparv/: process_routes.py  routes.py  storage.py  storage_routes.py  utils.py
minsb/static/: oas.yaml
minsb/templates/: apidoc.html
minsb/views/: general.py  nextcloud.py  sparv.py
templates/: apidoc.html  developers-guide.md  docsify.html  openapi_to_markdown.j2
tests/: __init__.py  conftest.py  test_routes.py
tests/test_data/: test_config.yaml
