[project]
name = "mink-backend"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license.text = "MIT License"
authors = [
    { name = "Språkbanken", email = "sb-info@svenska.gu.se" }
]
dependencies = []

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
