[project]
name = "mink-backend"
version = "2.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }
]
dependencies = []

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
output-format = "grouped"

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "D",      # pydocstyle
    "D400",   # pydocstyle: ends-in-period
    "D401",   # pydocstyle: non-imperative-mood
    "E",      # pycodestyle: errors
    "F",      # Pyflakes
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # Ruff-specific rules
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "TID",    # flake8-tidy-imports
    "TRY",    # exception handling
    "UP",     # pyupgrade
    "W",      # pycodestyle: warnings
]
ignore = [
    "ANN401",  # flake8-annotations: any-type
    "B008",    # flake8-bugbear: function-call-in-default-argument
    "COM812",  # flake8-commas: missing-trailing-comma
    "E741",    # pycodestyle: ambiguous-variable-name
    "PLR09",   # Pylint: too-many-*
    "PLR1702", # Pylint: too-many-nested-blocks
    "TRY003",  # tryceratops: Avoid specifying long messages outside the exception class
    "SIM105",  # flake8-simplify: suppressible-exception
]

preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-s -v --tb=no --custom-log-level=info"
log_cli = false
